--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.saihou.adpic"
+        applicationId "com.space.apic"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
