--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         android:name="android.support.multidex.MultiDexApplication">
+        android:largeHeap="true"
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
