--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
+
 apply plugin: 'com.android.application'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 23
@@ -39,4 +54,7 @@ dependencies {
     compile 'com.cocosw:bottomsheet:1.+@aar'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
+    compile('com.twitter.sdk.android:twitter:1.12.1@aar') {
+        transitive = true;
+    }
 }
