--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.cocosw:bottomsheet:1.+@aar'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
 }
