--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/adpic_logo"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name">
         android:name="android.support.multidex.MultiDexApplication">
         android:largeHeap="true"
         <activity
             android:name=".MainActivity"
+            android:theme="@style/AppTheme"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +28,7 @@
             android:value="2a8f47beabd63ca0d3eaa1bd3b4a6a75b03494a6" />
         <activity
             android:name=".UberTripExperience"
+            android:theme="@style/UberAppTheme"
             android:label="@string/title_activity_uber_trip_experience" >
         </activity>
     </application>
